test/tests/operators/to_google_secops/empty_labels.txt
error: `labels` must not be empty
 --> tests/operators/to_google_secops/empty_labels.tql:8:25
  |
8 |   log_text=text, labels={}
  |                         ^^ 
  |
